fix: button align

--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -66,6 +66,7 @@
 }
 
 .action {
+  text-align: left;
   border: none;
   color: currentColor;
   position: relative;
